Cleaned up scripts

--- a/backend/shared/i18n/package.json
+++ b/backend/shared/i18n/package.json
@@ -10,8 +10,7 @@
         "src"
     ],
     "scripts": {
-        "build": "tsc -b",
-        "build:full": "rm -rf ./dist && yarn build"
+        "build": "tsc -b"
     },
     "peerDependencies": {
         "@simonbackx/simple-endpoints": "*"
