--- a/shared/locales/package.json
+++ b/shared/locales/package.json
@@ -17,7 +17,6 @@
         }
     },
     "scripts": {
-        "build": "tsc -b . esm && node build.mjs",
-        "build:full": "rm -rf ./dist && rm -rf ./esm/dist && yarn build"
+        "build": "tsc -b . esm && node build.mjs"
     }
 }
