Added multiple companies for organizations and VATNumber verification

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -259,5 +259,8 @@
     "Bewerk inschrijvingsinstellingen": "Bewerk inschrijvingsinstellingen",
     "Welkom op het ledenportaal, hier kan je jouw gegevens beheren en je inschrijven.": "Welkom op het ledenportaal, hier kan je jouw gegevens beheren en je inschrijven.",
     "Zoek jouw vereniging": "Zoek jouw vereniging",
-    "Kies een vereniging": "Kies een vereniging"
+    "Kies een vereniging": "Kies een vereniging",
+    "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?": "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?",
+    "Nieuwe facturatiegegevens": "Nieuwe facturatiegegevens",
+    "Facturatiegegevens bewerken": "Facturatiegegevens bewerken"
 }
