Changed order and text of PremiseView

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -262,6 +262,6 @@
     "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?": "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?",
     "Nieuwe facturatiegegevens": "Nieuwe facturatiegegevens",
     "Facturatiegegevens bewerken": "Facturatiegegevens bewerken",
-    "Naam van het gebouw": "Naam van het gebouw",
-    "Beschrijving van het gebouw": "Omschrijving van het gebouw"
+    "Naam van het gebouw": "Optionele naam van het gebouw",
+    "Beschrijving van het gebouw": "Optionele beschrijving van het gebouw"
 }
