Added premise name and description (#207)
* Added name and description to premise

* Changed order and text of PremiseView

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -261,5 +261,7 @@
     "Kies een vereniging": "Kies een vereniging",
     "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?": "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?",
     "Nieuwe facturatiegegevens": "Nieuwe facturatiegegevens",
-    "Facturatiegegevens bewerken": "Facturatiegegevens bewerken"
+    "Facturatiegegevens bewerken": "Facturatiegegevens bewerken",
+    "Naam van het gebouw": "Optionele naam van het gebouw",
+    "Beschrijving van het gebouw": "Optionele beschrijving van het gebouw"
 }
