--- a/backend/shared/i18n/package.json
+++ b/backend/shared/i18n/package.json
@@ -14,5 +14,8 @@
     },
     "peerDependencies": {
         "@simonbackx/simple-endpoints": "*"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
