Show separate group function rows

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -180,7 +180,7 @@
         },
         "Groups": {
             "review": {
-                "title": "Kijk de leeftijdgroepen na",
+                "title": "Kijk de groepen na",
                 "description": "Kijk of de prijzen, de leeftijd en de beschrijving correct zijn ingesteld."
             }
         },
