--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -102,7 +102,7 @@
             }
         },
         "start": {
-            "title": "Beheerdersportaal",
+            "title": "Mijn groep",
             "title-description": "Welkom op het beheerdersportaal. Hier kan je jouw vereniging beheren en instellingen aanpassen."
         },
         "webshop": {
