Added review checkbox (#211)
* Added review checkbox

* Added review checkbox translations

* Fixed LoadingButton

* Fixed loading button spinner position

* Added review premises

* Refactored ProgressIcon and GroupIcon

* Removed duplicate style-icon-container

* Fixed style blue icon

* Fixed patch organization unknown tag

* Removed organization image on FunctionReview

* Made premise address required

* Fixed change requests

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -169,12 +169,15 @@
     },
     "setup.Premises.review.title": "Kijk de gebouwen na",
     "setup.Premises.review.description": "Kijk de adressen van de gebouwen na.",
+    "setup.Premises.review.checkbox": "Ik heb alle gebouwen nagekeken",
     "setup.Premises.todo.title": "Voeg gebouwen toe",
     "setup.Premises.todo.description": "Voeg gebouwen toe of verwijder gebouwen.",
     "setup.Groups.review.title": "Kijk de groepen na",
     "setup.Groups.review.description": "Kijk of de prijzen, de leeftijd en de beschrijving correct zijn ingesteld.",
+    "setup.Groups.review.checkbox": "Ik heb alle groepen nagekeken",
     "setup.Functions.review.title": "Kijk de functies na",
     "setup.Functions.review.description": "Kijk de toegangsrechten en functies na.",
+    "setup.Functions.review.checkbox": "Ik heb alle functies nagekeken",
     "setup.Functions.todo.title": "Voeg functies toe",
     "setup.Functions.todo.description": "Voeg alle verplichte functies toe.",
     "setup.Companies.review.title": "Kijk de facturatiegegevens na",
