--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -1,27 +1,10 @@
 {
-  "shared": {
-    "login": "Login",
-    "emails": {
-      "general": "hello@stamhoofd.be",
-      "personal": "simon@stamhoofd.be"
-    },
-    "inputs": {
-      "iban": {
-        "placeholder": "E.g. BE71 6316 1793 1960"
-      },
-      "companyNumber": {
-        "label": "Company number"
-      }
-    }
-  },
-  "backend": {},
-  "dashboard": {
-    "join": "Join us",
-    "start": {
-        "title": "Administrator portal",
-        "title-description": "Welcome to the administrator portal. Here you can manage your organization and manage settings."
-    }
-  },
-  "webshop": {},
-  "registration": {}
+    "dashboard.join": "Join us",
+    "dashboard.start.title": "Administrator portal",
+    "dashboard.start.title-description": "Welcome. Here you can manage your organization and manage settings.",
+    "shared.emails.general": "hello@stamhoofd.be",
+    "shared.emails.personal": "simon@stamhoofd.be",
+    "shared.inputs.companyNumber.label": "Company number",
+    "shared.inputs.iban.placeholder": "E.g. BE71 6316 1793 1960",
+    "shared.login": "Login"
 }
