--- a/shared/locales/src/nl-NL.json
+++ b/shared/locales/src/nl-NL.json
@@ -1,94 +1,28 @@
 {
-  "shared": {
-    "login": "Inloggen",
-    "transferTypes": {
-      "structured": "Betalingskenmerk"
-    },
-    "inputs": {
-      "iban": {
-        "placeholder": "Bv. NL21 INGB 3115 4044 17"
-      },
-      "companyNumber": {
-        "label": "KvK-nummer"
-      },
-      "mobile": {
-        "invalidMessage": "Ongeldig mobiel nummer",
-        "invalidMessageTryCountry": "Ongeldig mobiel nummer. Als je een nummer probeert in te geven uit een ander land dan Nederland, voeg dan de internationale code toe voor het nummer. Voor België is dat bijvoorbeeld +32."
-      }
-    },
-    "domains": {
-      "marketing": "www.stamhoofd.nl",
-      "email": "stamhoofd.nl"
-    },
-    "emails": {
-      "complaints": "klachten@stamhoofd.nl",
-      "general": "hallo@stamhoofd.nl",
-      "personal": "simon@stamhoofd.nl"
-    },
-    "exampleData": {
-      "phone": "+31 6 12345678"
-    }
-  },
-  "backend": {},
-  "dashboard": {
-    "settings": {
-      "menu": {
-        "paymentMethods": {
-          "description": "Bankrekeningnummer, iDEAL, Kredietkaart..."
-        }
-      },
-      "paymentMethods": {
-        "mollie": {
-          "activeDescription": "Online betalingen (via o.a. iDEAL, kredietkaart of Bancontact) zijn mogelijk. Vink de betaalmethodes die je wilt activeren aan, en zorg dat ze ook in Mollie geactiveerd staan.",
-          "description": "Je kan online betalingen gebruiken in Stamhoofd door te koppelen met Mollie via de onderstaande knop. Hiermee kan je betalingen via iDEAL, kredietkaart en Bancontact activeren. Je betaalt hier wel hogere transactiekosten dan via onze huidige partner."
-        },
-        "buckaroo": {
-          "description": "Om online betalingen te activeren moet je eerst allerlei documenten aanleveren (alle instructies via knop hieronder), de activatie hiervan duurt ongeveer 1 - 3 weken. Hiermee kan je betalingen via iDEAL, kredietkaart en/of Bancontact activeren."
-        }
-      },
-      "domain": {
-        "domainPlaceholder": "bv. jouwvereniging.nl"
-      },
-      "email": {
-        "description": "Voeg hier de e-mailadressen van jouw vereniging toe. Als je e-mailadressen hebt met jouw eigen domeinnaam (bv. info@mijnvereniging.nl), kan je e-mails versturen vanaf dat e-mailadres als je jouw domeinnaam eerst toevoegt (kan bij instellingen). Andere e-mails worden vanaf @stamhoofd.email verstuurd. Voeg enkel e-mailadressen toe waar je e-mails op kan ontvangen."
-      },
-      "personalize": {
-        "domainDescriptionSuffixForMemberRegistrations": "Je kan ook je eigen domeinnaam (bv. inschrijven.mijnvereniging.nl) instellen. Hiervoor moet je wel de domeinnaam al gekocht hebben; meestal zal dat al het geval zijn als je al een eigen website hebt.",
-        "domainDescription": "{'Je kan e-mails versturen vanaf je eigen domeinnaam (bv. info@jouw-domeinnaam.nl). Hiervoor moet je wel de domeinnaam al gekocht hebben; meestal zal dat al het geval zijn als je al een eigen website hebt.'}"
-      },
-      "registrationPage": {
-        "linkDescription": "Je kan deze link ook personaliseren met jouw eigen domeinnaam via Instellingen > Personaliseren. bv. inschrijven.mijnvereniging.nl"
-      }
-    },
-    "inputs": {
-      "website": {
-        "placeholder": "bv. https://www.vereniging.nl"
-      },
-      "privacyUrl": {
-        "placeholder": "bv. https://www.vereniging.nl/privacy"
-      },
-      "shopUrl": {
-        "placeholder": "bv. shop.domeinnaam.nl/snoepen"
-      }
-    },
-    "webshop": {
-      "customDomain": {
-        "description": "Hier kan je jouw eigen domeinnaam kiezen (die moet je wel zelf al in bezit hebben), eventueel met iets na het streepje (/). Zo kan je bijvoorbeeld al je verkopen organiseren op shop.domeinnaam.nl/snoepen, met daarachter telkens een ander achtervoegsel. Maar dat achtervoegsel is optioneel, je kan ook snoepen.domeinnaam.nl gebruiken. Het voordeel van de eerste oplossing is dat jouw webmaster maar één keer DNS-wijzigingen moet doen."
-      },
-      "deliveryMethod": {
-        "name": {
-          "placeholder": "bv. PostNL"
-        }
-      }
-    }
-  },
-  "webshop": {},
-  "registration": {},
-  "dasboard": {
-    "settings": {
-      "paymentMethods": {
-        "mollie": {}
-      }
-    }
-  }
+    "dashboard.inputs.privacyUrl.placeholder": "bv. https://www.vereniging.nl/privacy",
+    "dashboard.inputs.shopUrl.placeholder": "bv. shop.domeinnaam.nl/snoepen",
+    "dashboard.inputs.website.placeholder": "bv. https://www.vereniging.nl",
+    "dashboard.settings.domain.domainPlaceholder": "bv. jouwvereniging.nl",
+    "dashboard.settings.email.description": "Voeg hier de e-mailadressen van jouw vereniging toe. Als je e-mailadressen hebt met jouw eigen domeinnaam (bv. info@mijnvereniging.nl), kan je e-mails versturen vanaf dat e-mailadres als je jouw domeinnaam eerst toevoegt (kan bij instellingen). Andere e-mails worden vanaf @stamhoofd.email verstuurd. Voeg enkel e-mailadressen toe waar je e-mails op kan ontvangen.",
+    "dashboard.settings.menu.paymentMethods.description": "Bankrekeningnummer, iDEAL, Kredietkaart...",
+    "dashboard.settings.paymentMethods.buckaroo.description": "Om online betalingen te activeren moet je eerst allerlei documenten aanleveren (alle instructies via knop hieronder), de activatie hiervan duurt ongeveer 1 - 3 weken. Hiermee kan je betalingen via iDEAL, kredietkaart en/of Bancontact activeren.",
+    "dashboard.settings.paymentMethods.mollie.activeDescription": "Online betalingen (via o.a. iDEAL, kredietkaart of Bancontact) zijn mogelijk. Vink de betaalmethodes die je wilt activeren aan, en zorg dat ze ook in Mollie geactiveerd staan.",
+    "dashboard.settings.paymentMethods.mollie.description": "Je kan online betalingen gebruiken in Stamhoofd door te koppelen met Mollie via de onderstaande knop. Hiermee kan je betalingen via iDEAL, kredietkaart en Bancontact activeren. Je betaalt hier wel hogere transactiekosten dan via onze huidige partner.",
+    "dashboard.settings.personalize.domainDescription": "{'Je kan e-mails versturen vanaf je eigen domeinnaam (bv. info@jouw-domeinnaam.nl). Hiervoor moet je wel de domeinnaam al gekocht hebben; meestal zal dat al het geval zijn als je al een eigen website hebt.'}",
+    "dashboard.settings.personalize.domainDescriptionSuffixForMemberRegistrations": "Je kan ook je eigen domeinnaam (bv. inschrijven.mijnvereniging.nl) instellen. Hiervoor moet je wel de domeinnaam al gekocht hebben; meestal zal dat al het geval zijn als je al een eigen website hebt.",
+    "dashboard.settings.registrationPage.linkDescription": "Je kan deze link ook personaliseren met jouw eigen domeinnaam via Instellingen > Personaliseren. bv. inschrijven.mijnvereniging.nl",
+    "dashboard.webshop.customDomain.description": "Hier kan je jouw eigen domeinnaam kiezen (die moet je wel zelf al in bezit hebben), eventueel met iets na het streepje (/). Zo kan je bijvoorbeeld al je verkopen organiseren op shop.domeinnaam.nl/snoepen, met daarachter telkens een ander achtervoegsel. Maar dat achtervoegsel is optioneel, je kan ook snoepen.domeinnaam.nl gebruiken. Het voordeel van de eerste oplossing is dat jouw webmaster maar één keer DNS-wijzigingen moet doen.",
+    "dashboard.webshop.deliveryMethod.name.placeholder": "bv. PostNL",
+    "shared.domains.email": "stamhoofd.nl",
+    "shared.domains.marketing": "www.stamhoofd.nl",
+    "shared.emails.complaints": "klachten@stamhoofd.nl",
+    "shared.emails.general": "hallo@stamhoofd.nl",
+    "shared.emails.personal": "simon@stamhoofd.nl",
+    "shared.exampleData.phone": "+31 6 12345678",
+    "shared.inputs.companyNumber.label": "KvK-nummer",
+    "shared.inputs.iban.placeholder": "Bv. NL21 INGB 3115 4044 17",
+    "shared.inputs.mobile.invalidMessage": "Ongeldig mobiel nummer",
+    "shared.inputs.mobile.invalidMessageTryCountry": "Ongeldig mobiel nummer. Als je een nummer probeert in te geven uit een ander land dan Nederland, voeg dan de internationale code toe voor het nummer. Voor België is dat bijvoorbeeld +32.",
+    "shared.login": "Inloggen",
+    "shared.transferTypes.structured": "Betalingskenmerk"
 }
