Added translations for setup type email and payment

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -126,18 +126,18 @@
     "Onbeperkt": "Onbeperkt",
     "Optioneel. Geef een uitleg wanneer dit type activiteit gebruikt moet worden.": "Optioneel. Geef een uitleg wanneer dit type activiteit gebruikt moet worden.",
     "registration.inputs.parentPhone.placeholder": "Mobiel nummer van ouder",
+
     "setup.Companies.review.description": "Kijk na of de facturatiegegevens correct zijn en markeer het als nagekeken.",
     "setup.Companies.review.title": "Kijk je facturatiegegevens na",
     "setup.Companies.review.checkboxTitle": "Bevestig dat je facturatiegegevens nagekeken zijn",
     "setup.Companies.todo.description": "Je hebt nog geen facturatiegegevens ingesteld. Vul dit aan.",
-    "setup.Companies.todo.title": "Voeg je facturatiegegevens toe",
-    "setup.Companies.todo.checkboxTitle": "Voeg je ontbrekende facturatiegegevens toe",
+    "setup.Companies.todo.title": "Voeg je ontbrekende facturatiegegevens toe",
+
     "setup.Functions.review.description": "Bevestig dat iedereen de juiste functies heeft gekregen.",
     "setup.Functions.review.title": "Bevestig dat alle functies zijn toegekend",
     "setup.Functions.review.checkboxTitle": "Bevestig dat alle functies zijn toegekend",
-    "setup.Functions.todo.description": "Geef iedereen toegang tot Ravot door ze de juiste funcites te geven.",
-    "setup.Functions.todo.title": "Ken alle verplichte functies toe",
-    "setup.Functions.todo.checkboxTitle": "Ken alle verplichte functies toe aan je leidingsploeg",
+    "setup.Functions.todo.description": "Geef iedereen toegang tot Ravot door ze de juiste functies te geven.",
+    "setup.Functions.todo.title": "Ken alle verplichte functies toe aan je leidingsploeg",
     "setup.Groups.review.checkbox": "Ik heb alle leeftijdsgroepen nagekeken",
     "setup.Groups.review.description": "Kijk of de prijzen, de leeftijd en de beschrijving correct zijn ingesteld.",
     "setup.Groups.review.title": "Bevestig dat je leeftijdsgroepen in orde zijn",
@@ -145,9 +145,20 @@
     "setup.Premises.review.description": "Voeg alle lokalen toe en kijk of de gegevens nog up-to-date zijn.",
     "setup.Premises.review.title": "Bevestig dat je lokalen nagekeken zijn",
     "setup.Premises.review.checkboxTitle": "Bevestig dat je lokalen nagekeken zijn",
-    "setup.Premises.todo.description": "Voeg minstens één lokaal toe",
+    "setup.Premises.todo.description": "Voeg minstens één lokaal toe.",
     "setup.Premises.todo.title": "Voeg je lokalen toe",
-    "setup.Premises.todo.checkboxTitle": "Voeg je lokalen toe",
+    "setup.Emails.review.description": "Bevestig dat de e-mailadressen juist zijn.",
+    "setup.Emails.review.title": "Bevestig de e-mailadressen",
+    "setup.Emails.review.checkboxTitle": "Bevestig dat de e-mailadressen juist zijn",
+    "setup.Emails.todo.description": "Voeg minstens één e-mailadres toe.",
+    "setup.Emails.todo.title": "Voeg e-mailadressen toe",
+
+    "setup.Payment.review.description": "Bevestig dat de betaalmethodes correct zijn ingesteld.",
+    "setup.Payment.review.title": "Bevestig de betaalmethodes",
+    "setup.Payment.review.checkboxTitle": "Bevestig dat de betaalmethodes correct zijn ingesteld",
+    "setup.Payment.todo.description": "Voeg minstens één betaalmethode toe.",
+    "setup.Payment.todo.title": "Voeg betaalmethode toe",
+
     "shared.address": "Adres",
     "shared.allAgeGroups": "Alle leeftijdsgroepen",
     "shared.allOrganizations": "Alle verenigingen",
