--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -147,8 +147,8 @@
     "setup.Premises.review.checkboxTitle": "Bevestig dat je lokalen nagekeken zijn",
     "setup.Premises.todo.description": "Voeg minstens één lokaal toe.",
     "setup.Premises.todo.title": "Voeg je lokalen toe",
-    "setup.Emails.review.description": "Bevestig dat de e-mailadressen juist zijn.",
-    "setup.Emails.review.title": "Bevestig de e-mailadressen",
+    "setup.Emails.review.description": "Voeg minstens één e-mailadres toe.",
+    "setup.Emails.review.title": "Voeg e-mailadressen toe",
     "setup.Emails.review.checkboxTitle": "Bevestig dat de e-mailadressen juist zijn",
     "setup.Emails.todo.description": "Voeg minstens één e-mailadres toe.",
     "setup.Emails.todo.title": "Voeg e-mailadressen toe",
