Changed translation step emails

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -145,11 +145,11 @@
     "setup.Premises.review.checkboxTitle": "Bevestig dat je lokalen nagekeken zijn",
     "setup.Premises.todo.description": "Voeg minstens één lokaal toe.",
     "setup.Premises.todo.title": "Voeg je lokalen toe",
-    "setup.Emails.review.description": "Voeg minstens één e-mailadres toe.",
-    "setup.Emails.review.title": "Voeg e-mailadressen toe",
+    "setup.Emails.review.description": "Voeg minstens één standaard e-mailadres toe.",
+    "setup.Emails.review.title": "Voeg standaard e-mailadres toe",
     "setup.Emails.review.checkboxTitle": "Bevestig dat de e-mailadressen juist zijn",
-    "setup.Emails.todo.description": "Voeg minstens één e-mailadres toe.",
-    "setup.Emails.todo.title": "Voeg e-mailadressen toe",
+    "setup.Emails.todo.description": "Voeg minstens één standaard e-mailadres toe.",
+    "setup.Emails.todo.title": "Voeg standaard e-mailadres toe",
     "setup.Payment.review.description": "Bevestig dat de betaalmethodes correct zijn ingesteld.",
     "setup.Payment.review.title": "Bevestig de betaalmethodes",
     "setup.Payment.review.checkboxTitle": "Bevestig dat de betaalmethodes correct zijn ingesteld",
