Added group status toggle and default closed groups
fixes STA-112
fixes STA-111

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -110,7 +110,7 @@
     "groups.title.new.eventRegistration": "Inschrijvingen voor activiteit instellen",
     "groups.title.new.membership": "Inschrijvingsgroep maken",
     "Inschrijven sluit op": "Inschrijven sluit op",
-    "Inschrijven start op": "Inschrijven start op",
+    "Openen op": "Openen op",
     "Inschrijvingen verzamelen": "Inschrijvingen verzamelen",
     "Je verliest alle bijhorende informatie en kan dit niet ongedaan maken.": "Je verliest alle bijhorende informatie en kan dit niet ongedaan maken.",
     "Kies een vereniging": "Kies een vereniging",
@@ -203,7 +203,7 @@
     "shared.website.description": "De link naar de website van jouw vereniging.",
     "shared.website.optional": "Website (optioneel)",
     "Sluit inschrijvingen automatisch na een bepaalde datum": "Sluit inschrijvingen automatisch na een bepaalde datum",
-    "Start inschrijvingen pas na een bepaalde datum": "Start inschrijvingen pas na een bepaalde datum",
+    "Open inschrijvingen pas na een bepaalde datum": "Open inschrijvingen pas na een bepaalde datum",
     "Tot welk tijdstip": "Tot welk tijdstip",
     "Vanaf": "Vanaf",
     "Verwijderen": "Verwijderen",
