Translated text containing stamhoofd

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -74,6 +74,7 @@
     "dashboard.inputs.privacyUrl.placeholder": "bv. https://www.vereniging.be/privacy",
     "dashboard.inputs.shopUrl.placeholder": "bv. shop.domeinnaam.be/wafelbak",
     "dashboard.inputs.website.placeholder": "bv. https://www.vereniging.be",
+    "kan niet activeren, eerst aansluiten": "Je kan {paymentMethod} niet activeren, daarvoor moet je eerst aansluiten bij een betaalprovider via de Stamhoofd instellingen > Betaalaccounts.",
     "dashboard.join": "Aansluiten",
     "dashboard.organization-selection.search-placeholder": "Zoek op naam of postcode",
     "dashboard.organization-selection.welcome-description": "Welkom op het dashboard voor beheerders van verenigingen op Stamhoofd. Als jouw vereniging al is aangesloten bij Stamhoofd, kan je die hieronder zoeken.",
@@ -96,10 +97,23 @@
     "dashboard.settings.personalize.domainDescription": "{'Je kan e-mails versturen vanaf je eigen domeinnaam (bv. info@jouw-domeinnaam.be). Hiervoor moet je wel de domeinnaam al gekocht hebben; meestal zal dat al het geval zijn als je al een eigen website hebt.'}",
     "dashboard.settings.personalize.domainDescriptionSuffixForMemberRegistrations": "Je kan ook je eigen domeinnaam (bv. inschrijven.mijnvereniging.be) instellen. Hiervoor moet je wel de domeinnaam al gekocht hebben; meestal zal dat al het geval zijn als je al een eigen website hebt.",
     "dashboard.settings.registrationPage.linkDescription": "Je kan deze link ook personaliseren met jouw eigen domeinnaam via Instellingen > Personaliseren. bv. inschrijven.mijnvereniging.be",
+    "dashboard.settings.registrationPage.description": "Leden kunnen zelfstandig inschrijven via het ledenportaal. Dit is een link die je op jouw website kan plaatsen of kan versturen via e-mail. Daarnaast kan je leden ook uitnodigen om in te schrijven, dat doe je door ze eerst toe te voegen in Stamhoofd en daarna een e-mail te sturen waarbij je de 'magische knop' onderaan toevoegt.",
+    "dashboard.settings.domain.inactive": "Jouw domeinnaam is nog niet actief voor het versturen van e-mails vanaf die domeinnaam, maar je kan in tussentijd wel al e-mails versturen via Stamhoofd. Stamhoofd zorgt dat antwoorden op die e-mails wel bij jullie terecht komen.",
     "dashboard.start.title": "Mijn groep",
     "dashboard.start.title-description": "Welkom op het beheerdersportaal. Hier kan je jouw vereniging beheren en instellingen aanpassen.",
     "dashboard.webshop.customDomain.description": "Hier kan je jouw eigen domeinnaam kiezen (die moet je wel zelf al in bezit hebben), eventueel met iets na het streepje (/). Zo kan je bijvoorbeeld al je verkopen organiseren op shop.domeinnaam.be/wafelbak, met daarachter telkens een ander achtervoegsel. Maar dat achtervoegsel is optioneel, je kan ook wafelbak.domeinnaam.be gebruiken. Het voordeel van de eerste oplossing is dat jouw webmaster maar één keer DNS-wijzigingen moet doen.",
     "dashboard.webshop.deliveryMethod.name.placeholder": "bv. Bpost",
+    "dashboard.webshop.edit.link.warning": "Opgelet: als je de link naar jouw webshop aanpast, werken mogelijks sommige links in al verzonden e-mails niet meer. De enige uitzondering hierop is als je van een standaard Stamhoofd link overschakelt op een eigen domeinnaam (dan blijven oude links werken). Doe dit dus enkel in het begin van een verkoop.",
+    "dashboard.webshop.edit.reduceBranding.description": "Stamhoofd toont op enkele plaatsen het logo van Stamhoofd op jullie webshop. Op die manier kunnen we Stamhoofd bekender maken bij andere verenigingen, waardoor we Stamhoofd ook betaalbaar kunnen houden. Je kan dit verminderen als je dit toch liever niet wilt.",
+    "dashboard.webshop.edit.reduceBranding.label": "Verminder de zichtbaarheid van Stamhoofd",
+    "dashboard.webshop.edit.buildInData.description": "Bepaalde gegevens zijn ingebouwd in Stamhoofd zodat we die ook op een speciale manier kunnen verwerken. Je kan deze hier aan of uit zetten.",
+    "dashboard.webshop.edit.seating.import.description": "Importeer een zaalplan dat jij of een andere vereniging eerder uit Stamhoofd hebt geëxporteerd. Importeren vanaf andere systemen is niet mogelijk.",
+    "dashboard.webshop.edit.seating.import.error": "Er is iets misgelopen bij het importeren van het zaalplan. Kijk na of het bestand dat je hebt gekozen wel uit Stamhoofd afkomstig is.",
+    "dashboard.documents.template.field.categories.info": "Deze invoervelden zijn nodig op elk document, maar je moet hier instellen welke gegevens je uit Stamhoofd daarin wilt invullen. Koppel je met meerdere gegevens uit Stamhoofd, dan gaan we de eerste beschikbare op het document invullen. Bv. als er bij het lid zelf geen adres werd ingevuld, neem dan het adres van de eerste ouder.",
+    "dashboard.documents.template.autoChange.description": "Stamhoofd kan de inhoud van documenten automatisch wijzigen als de daarbij horende gegevens wijzigen, en nieuwe documenten aanmaken als er nieuwe inschrijvingen bij komen (ook na publicatie). Dat is ideaal om bijvoorbeeld ontbrekende of foute gegevens door leden nog te laten invullen via het ledenportaal. Op het moment dat je documenten officiëel hebt ingedient (indien van toepassing), zet je dit best uit. Als dit uit staat zullen onvolledige documenten niet langer zichtbaar zijn voor leden.",
+    "dashboard.sponsors.logo.description": "Upload hier het logo zonder extra tekst of witruimtes. Laat leeg als je die niet hebt, en upload dan een banner. Zo kan Stamhoofd de plaatsing optimaliseren. We plaatsen het logo bij voorkeur op de afgedrukte versie van een ticket als zowel een logo als banner aanwezig is.",
+    "dashboard.sponsors.logo.dimensions.description": "De ideale afmeting voor een banner van een sponsor is 1104x450px. De banner wordt maximaal 150px hoog getoond, maar een veelvoud is noodzakelijk voor een niet-pixelachtige weergave op smartphones. Upload bij voorkeur voor alle sponsors een afbeelding met dezelfde afmetingen. Vermijd het uploaden van het logo als banner, laat dan de banner weg. Als zowel een logo als banner werd geupload zal Stamhoofd de banner verkiezen op mobiele tickets, en het logo op de afgedrukte tickets.",
+    "dashboard.signup.reuseRegisterCode.warning": "Je probeert een doorverwijzingslink met korting van een andere vereniging te gebruiken, maar je hebt al een vereniging geregistreerd. Een doorverwijzingslink is enkel geldig voor de eerste vereniging die je op Stamhoofd aansluit.",
     "De activiteit is verwijderd": "De activiteit is verwijderd",
     "Facturatiegegevens bewerken": "Facturatiegegevens bewerken",
     "Geen": "Geen",
@@ -202,6 +216,7 @@
     "shared.website": "Website",
     "shared.website.description": "De link naar de website van jouw vereniging.",
     "shared.website.optional": "Website (optioneel)",
+    "shared.payments.reimburse.info": "Kies hieronder wat er precies terugbetaald (negatief bedrag invullen) werd. Let op dat Stamhoofd momenteel geen automatische terugbetalingen doet voor online betalingen. Je moet dus zelf het bedrag manueel terugbetalen of storten.",
     "Sluit inschrijvingen automatisch na een bepaalde datum": "Sluit inschrijvingen automatisch na een bepaalde datum",
     "Open inschrijvingen pas na een bepaalde datum": "Open inschrijvingen pas na een bepaalde datum",
     "Tot welk tijdstip": "Tot welk tijdstip",
@@ -211,5 +226,13 @@
     "Zoek jouw vereniging": "Zoek jouw vereniging",
     "Je moet elke betaling zelf controleren en markeren als betaald in Stamhoofd": "Je moet elke betaling zelf controleren en markeren als betaald in Stamhoofd",
     "administrationFee.description": "Breng een kost in rekening per betaling (dus slechts één keer, ook als er meerdere zaken worden afgerekend in één betaling). Hiermee kan je de kost van Stamhoofd recupereren en/of de tijd die je bezig bent met het verwerken van inschrijvingen/bestellingen. Wettelijk gezien is het niet toegestaan dat je deze laat afhangen van de gekozen betaalmethode (dat is dus niet mogelijk).",
-    "Maak API-keys aan om toegang te krijgen tot de Stamhoofd-API.": "Maak API-keys aan om toegang te krijgen tot de Stamhoofd-API."
+    "Maak API-keys aan om toegang te krijgen tot de Stamhoofd-API.": "Maak API-keys aan om toegang te krijgen tot de Stamhoofd-API.",
+    "Alle betalingen, transactiekosten en uitbetalingen die via Stamhoofd verliepen.": "Alle betalingen, transactiekosten en uitbetalingen die via Stamhoofd verliepen.",
+    "Vertel Stamhoofd door aan andere verenigingen": "Vertel Stamhoofd door aan andere verenigingen",
+    "Gebruikt jouw vereniging Stamhoofd al?": "Gebruikt jouw vereniging Stamhoofd al?",
+    "De velden {unlinkedAnswersText} werden manueel aangepast en zijn niet meer automatisch gelinkt met de waarden in Stamhoofd": "De velden {unlinkedAnswersText} werden manueel aangepast en zijn niet meer automatisch gelinkt met de waarden in Stamhoofd",
+    "Account loskoppelen van Stamhoofd": "Account loskoppelen van Stamhoofd",
+    "Lees hier meer over Stamhoofd.": "Lees hier meer over Stamhoofd.",
+    "Sluit jouw vereniging aan bij Stamhoofd": "Sluit jouw vereniging aan bij Stamhoofd",
+    "Terug naar Stamhoofd": "Terug naar Stamhoofd"
 }
