Fixed delete unreachable groups on delete category
Fixes STA-115

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -234,5 +234,6 @@
     "Account loskoppelen van Stamhoofd": "Account loskoppelen van Stamhoofd",
     "Lees hier meer over Stamhoofd.": "Lees hier meer over Stamhoofd.",
     "Sluit jouw vereniging aan bij Stamhoofd": "Sluit jouw vereniging aan bij Stamhoofd",
-    "Terug naar Stamhoofd": "Terug naar Stamhoofd"
+    "Terug naar Stamhoofd": "Terug naar Stamhoofd",
+    "Maak eerst een categorie om deze groep naar terug te zetten.": "Maak eerst een categorie om deze groep naar terug te zetten."
 }
