Improved premises copy

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -154,11 +154,11 @@
     "setup.Groups.review.description": "Kijk of de prijzen, de leeftijd en de beschrijving correct zijn ingesteld.",
     "setup.Groups.review.title": "Bevestig dat je leeftijdsgroepen in orde zijn",
     "setup.Groups.review.checkboxTitle": "Bevestig dat je leeftijdsgroepen in orde zijn",
-    "setup.Premises.review.description": "Voeg alle lokalen toe en kijk of de gegevens nog up-to-date zijn.",
-    "setup.Premises.review.title": "Bevestig dat je lokalen nagekeken zijn",
-    "setup.Premises.review.checkboxTitle": "Bevestig dat je lokalen nagekeken zijn",
-    "setup.Premises.todo.description": "Voeg minstens één lokaal toe.",
-    "setup.Premises.todo.title": "Voeg je lokalen toe",
+    "setup.Premises.review.description": "Voeg alle gebouwen toe en kijk of de gegevens nog up-to-date zijn.",
+    "setup.Premises.review.title": "Bevestig dat alle gebouwen nagekeken zijn",
+    "setup.Premises.review.checkboxTitle": "Bevestig dat alle verzekerde gebouwen nagekeken zijn",
+    "setup.Premises.todo.description": "Voeg minstens één gebouw toe.",
+    "setup.Premises.todo.title": "Voeg alle te verzekeren gebouwen toe",
     "setup.Emails.review.description": "Voeg minstens één standaard e-mailadres toe.",
     "setup.Emails.review.title": "Voeg standaard e-mailadres toe",
     "setup.Emails.review.checkboxTitle": "Bevestig dat de e-mailadressen juist zijn",
