--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -68,7 +68,7 @@
     "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?": "Ben je zeker dat je deze facturatiegegevens wilt verwijderen?",
     "Ben je zeker dat je wilt sluiten zonder op te slaan?": "Ben je zeker dat je wilt sluiten zonder op te slaan?",
     "Beschrijving": "Beschrijving",
-    "Beschrijving van het gebouw": "Optionele beschrijving van het gebouw",
+    "Beschrijving van het lokaal": "Beschrijving van het lokaal (optioneel)",
     "Bewerk inschrijvingsinstellingen": "Bewerk inschrijvingsinstellingen",
     "dashboard.inputs.parentPhone.placeholder": "Mobiel nummer van ouder",
     "dashboard.inputs.privacyUrl.placeholder": "bv. https://www.vereniging.be/privacy",
@@ -133,7 +133,7 @@
     "Maximum aantal activiteiten per jaar (optioneel)": "Maximum aantal activiteiten per jaar (optioneel)",
     "Maximum aantal dagen": "Maximum aantal dagen",
     "Minimum aantal dagen": "Minimum aantal dagen",
-    "Naam van het gebouw": "Optionele naam van het gebouw",
+    "Naam van het lokaal": "Naam van het lokaal (optioneel)",
     "Niet opslaan": "Niet opslaan",
     "Nieuwe facturatiegegevens": "Nieuwe facturatiegegevens",
     "Omslagfoto toevoegen": "Omslagfoto toevoegen",
@@ -154,18 +154,18 @@
     "setup.Groups.review.description": "Kijk of de prijzen, de leeftijd en de beschrijving correct zijn ingesteld.",
     "setup.Groups.review.title": "Bevestig dat je leeftijdsgroepen in orde zijn",
     "setup.Groups.review.checkboxTitle": "Bevestig dat je leeftijdsgroepen in orde zijn",
-    "setup.Premises.review.description": "Voeg alle gebouwen toe en kijk of de gegevens nog up-to-date zijn.",
-    "setup.Premises.review.title": "Bevestig dat alle gebouwen nagekeken zijn",
-    "setup.Premises.review.checkboxTitle": "Bevestig dat alle verzekerde gebouwen nagekeken zijn",
-    "setup.Premises.todo.description": "Voeg minstens één gebouw toe.",
-    "setup.Premises.todo.title": "Voeg alle te verzekeren gebouwen toe",
+    "setup.Premises.review.description": "Voeg alle lokalen toe en kijk of de gegevens nog up-to-date zijn.",
+    "setup.Premises.review.title": "Bevestig dat alle lokalen nagekeken zijn",
+    "setup.Premises.review.checkboxTitle": "Bevestig dat alle lokalen nagekeken zijn",
+    "setup.Premises.todo.description": "Voeg minstens één lokaal toe.",
+    "setup.Premises.todo.title": "Voeg alle te verzekeren lokalen toe",
     "setup.Emails.review.description": "Voeg minstens één standaard e-mailadres toe.",
-    "setup.Emails.review.title": "Voeg standaard e-mailadres toe",
+    "setup.Emails.review.title": "Voeg een standaard e-mailadres toe",
     "setup.Emails.review.checkboxTitle": "Bevestig dat de e-mailadressen juist zijn",
     "setup.Emails.todo.description": "Voeg minstens één standaard e-mailadres toe.",
-    "setup.Emails.todo.title": "Voeg standaard e-mailadres toe",
-    "setup.Payment.review.description": "Bevestig dat de betaalmethodes correct zijn ingesteld.",
-    "setup.Payment.review.title": "Bevestig de betaalmethodes",
+    "setup.Emails.todo.title": "Voeg een standaard e-mailadres toe",
+    "setup.Payment.review.description": "Bevestig dat de betaalmethodes correct zijn ingesteld. Deze betaalmethodes worden gebruikt als leden inschrijven via Ravot.",
+    "setup.Payment.review.title": "Bevestig de betaalmethodes voor inschrijvingen",
     "setup.Payment.review.checkboxTitle": "Bevestig dat de betaalmethodes correct zijn ingesteld",
     "setup.Payment.todo.description": "Voeg minstens één betaalmethode toe.",
     "setup.Payment.todo.title": "Voeg betaalmethode toe",
