--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -46,7 +46,7 @@
     "admin.settings.membershipTypes.period.title": "Instellingen voor {periodName}",
     "admin.settings.membershipTypes.title": "Aansluitingen en verzekeringen",
     "admin.settings.records.description": "Bepaal welke gegevens van leden worden verzameld",
-    "admin.settings.records.title": "Gegevens van leden",
+    "admin.settings.records.title": "Persoonsgegevens van leden",
     "admin.settings.registrationPeriods.delete.confirmation.description": "Dit verwijdert ook alle daarbij horende gegevens, zoals inschrijvingsgroepen. Je kan dit niet ongedaan maken.",
     "admin.settings.registrationPeriods.delete.confirmation.title": "Ben je zeker dat je dit werkjaar wilt verwijderen?",
     "admin.settings.registrationPeriods.delete.title": "Verwijder werkjaar",
