--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -235,5 +235,6 @@
     "Lees hier meer over Stamhoofd.": "Lees hier meer over Stamhoofd.",
     "Sluit jouw vereniging aan bij Stamhoofd": "Sluit jouw vereniging aan bij Stamhoofd",
     "Terug naar Stamhoofd": "Terug naar Stamhoofd",
-    "Maak eerst een categorie om deze groep naar terug te zetten.": "Maak eerst een categorie om deze groep naar terug te zetten."
+    "Maak eerst een categorie om deze groep naar terug te zetten.": "Maak eerst een categorie om deze groep naar terug te zetten.",
+    "Leden kunnen enkel zelf inschrijven via Stamhoofd": "Leden kunnen enkel zelf inschrijven via Stamhoofd"
 }
